feat: 增加 JDK 8 兼容发布线
将 starter 降级适配到 JDK 8 / Spring Boot 2.7 / LangChain4j 0.30.0，并为兼容分支引入 jdk8-0.2.0 独立版本号与发布规则，避免与主线构件和镜像标签混用。

Made-with: Cursor