@@ -1,6 +1,8 @@
 package com.log4ai.service;
 
 import java.io.IOException;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.Map;
 import java.util.concurrent.CompletableFuture;
 
@@ -8,10 +10,6 @@ import org.springframework.http.MediaType;
 import org.springframework.web.servlet.mvc.method.annotation.SseEmitter;
 
 import com.log4ai.runtime.Log4AiAssistantsHolder;
-import com.log4ai.support.LogEvidenceUiRedactor;
-import com.log4ai.support.LogToolUiSummary;
-
-import dev.langchain4j.service.tool.ToolExecution;
 
 /**
  * 将流式 Agent（见 {@link com.log4ai.runtime.Log4AiAssistantsHolder}）的 {@code TokenStream} 桥接为 SSE；由 {@link
@@ -30,102 +28,87 @@ public class LogAnalyzerStreamingService {
   }
 
   /**
-   * 通过 SSE 推送：{@code event:delta}（文本增量）、{@code event:tool}（工具执行摘要）、{@code event:done} 结束。
+   * 通过 SSE 推送：{@code event:delta}（文本增量）、{@code event:done} 结束。
+   *
+   * <p>在 LangChain4j 0.30.0 下，{@code TokenStream} 仅支持文本增量与完成/错误回调，暂无工具执行事件回调，故这里不再推送
+   * {@code event:tool}。
    */
   public SseEmitter stream(String sessionId, String userMessage) {
     String sid =
-        (sessionId == null || sessionId.isBlank()) ? "default" : sessionId.trim();
+        (sessionId == null || sessionId.trim().isEmpty()) ? "default" : sessionId.trim();
     SseEmitter emitter = new SseEmitter(SSE_TIMEOUT_MS);
 
     CompletableFuture.runAsync(
-        () -> {
-          try {
-            assistantsHolder
-                .requireStreaming()
-                .chat(sid, userMessage)
-                .onNext(
-                    token -> {
-                      if (token == null || token.isEmpty()) {
-                        return;
-                      }
-                      try {
-                        safeSend(
-                            emitter,
-                            SseEmitter.event()
-                                .name("delta")
-                                .data(Map.of("t", token), MediaType.APPLICATION_JSON));
-                      } catch (IOException e) {
-                        try {
-                          emitter.completeWithError(e);
-                        } catch (Exception ignored) {
-                          // 连接已关闭时 completeWithError 也可能失败
+        new Runnable() {
+          @Override
+          public void run() {
+            try {
+              assistantsHolder
+                  .requireStreaming()
+                  .chat(sid, userMessage)
+                  .onNext(
+                      token -> {
+                        if (token == null || token.isEmpty()) {
+                          return;
                         }
-                      }
-                    })
-                .onToolExecuted(exec -> sendToolEvent(emitter, exec))
-                .onComplete(
-                    response -> {
-                      try {
-                        safeSend(
-                            emitter,
-                            SseEmitter.event()
-                                .name("done")
-                                .data(Map.of(), MediaType.APPLICATION_JSON));
-                      } catch (IOException ignored) {
-                        // ignore
-                      }
-                      try {
-                        emitter.complete();
-                      } catch (Exception ignored) {
-                        // 客户端已断开时 complete 可能无效
-                      }
-                    })
-                .onError(
-                    error -> {
-                      try {
-                        String msg =
-                            error.getMessage() == null ? error.toString() : error.getMessage();
-                        safeSend(
-                            emitter,
-                            SseEmitter.event()
-                                .name("error")
-                                .data(Map.of("message", msg), MediaType.APPLICATION_JSON));
-                      } catch (IOException ignored) {
-                        // ignore
-                      }
-                      try {
-                        emitter.completeWithError(error);
-                      } catch (Exception ignored) {
-                        // 已结束或客户端已断开
-                      }
-                    })
-                .start();
-          } catch (Throwable t) {
-            emitter.completeWithError(t);
+                        try {
+                          safeSend(
+                              emitter,
+                              SseEmitter.event()
+                                  .name("delta")
+                                  .data(singletonMap("t", token), MediaType.APPLICATION_JSON));
+                        } catch (IOException e) {
+                          try {
+                            emitter.completeWithError(e);
+                          } catch (Exception ignored) {
+                            // 连接已关闭时 completeWithError 也可能失败
+                          }
+                        }
+                      })
+                  .onComplete(
+                      response -> {
+                        try {
+                          safeSend(
+                              emitter,
+                              SseEmitter.event()
+                                  .name("done")
+                                  .data(Collections.emptyMap(), MediaType.APPLICATION_JSON));
+                        } catch (IOException ignored) {
+                          // ignore
+                        }
+                        try {
+                          emitter.complete();
+                        } catch (Exception ignored) {
+                          // 客户端已断开时 complete 可能无效
+                        }
+                      })
+                  .onError(
+                      error -> {
+                        try {
+                          String msg =
+                              error.getMessage() == null ? error.toString() : error.getMessage();
+                          safeSend(
+                              emitter,
+                              SseEmitter.event()
+                                  .name("error")
+                                  .data(singletonMap("message", msg), MediaType.APPLICATION_JSON));
+                        } catch (IOException ignored) {
+                          // ignore
+                        }
+                        try {
+                          emitter.completeWithError(error);
+                        } catch (Exception ignored) {
+                          // 已结束或客户端已断开
+                        }
+                      })
+                  .start();
+            } catch (Throwable t) {
+              emitter.completeWithError(t);
+            }
           }
         });
 
     return emitter;
-  }
-
-  private void sendToolEvent(SseEmitter emitter, ToolExecution exec) {
-    try {
-      String name = exec.request() != null ? exec.request().name() : "tool";
-      String raw = exec.result() == null ? "" : exec.result();
-      String redacted = LogEvidenceUiRedactor.forSsePreview(raw);
-      String summary = LogToolUiSummary.line(name, redacted);
-      safeSend(
-          emitter,
-          SseEmitter.event()
-              .name("tool")
-              .data(Map.of("name", name, "summary", summary), MediaType.APPLICATION_JSON));
-    } catch (IOException e) {
-      try {
-        emitter.completeWithError(e);
-      } catch (Exception ignored) {
-        // 连接已关闭
-      }
-    }
   }
 
   /**
@@ -139,5 +122,11 @@ public class LogAnalyzerStreamingService {
     } catch (IllegalStateException ignored) {
       // emitter 已 complete / 底层连接已关闭
     }
+  }
+
+  private static Map<String, Object> singletonMap(String key, Object value) {
+    Map<String, Object> map = new HashMap<String, Object>();
+    map.put(key, value);
+    return map;
   }
 }
